@@ -1,13 +1,9 @@
 package net.momirealms.craftengine.core.plugin.dependency;
 
-import net.momirealms.craftengine.core.plugin.CraftEngine;
 import net.momirealms.craftengine.core.plugin.dependency.relocation.Relocation;
 
-import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
-import java.util.jar.JarFile;
-import java.util.zip.ZipEntry;
 
 public class Dependencies {
 
@@ -143,25 +139,6 @@ public class Dependencies {
             Collections.emptyList()
     );
 
-    public static final Dependency SLF4J_API = new Dependency(
-            "slf4j-api",
-            "org.slf4j",
-            "slf4j-api",
-            Collections.emptyList()
-    );
-
-    public static final Dependency SLF4J_SIMPLE = new Dependency(
-            "slf4j-simple",
-            "org.slf4j",
-            "slf4j-simple",
-            Collections.emptyList()
-    ) {
-        @Override
-        public String getVersion() {
-            return Dependencies.SLF4J_API.getVersion();
-        }
-    };
-
     public static final Dependency COMMONS_LANG3 = new Dependency(
             "commons-lang3",
             "org{}apache{}commons",
@@ -180,16 +157,7 @@ public class Dependencies {
             "commons-imaging",
             "org{}apache{}commons",
             "commons-imaging",
-            List.of(Relocation.of("commons", "org{}apache{}commons")),
-            (p) -> {
-                try (JarFile jarFile = new JarFile(p.toFile())) {
-                    ZipEntry entry = jarFile.getEntry("net/momirealms/craftengine/libraries/commons/imaging/Imaging.class");
-                    return entry != null;
-                } catch (IOException e) {
-                    CraftEngine.instance().logger().warn("Error reading jar file", e);
-                    return false;
-                }
-            }
+            List.of(Relocation.of("commons", "org{}apache{}commons"))
     );
 
     public static final Dependency BYTE_BUDDY = new Dependency(
@@ -224,7 +192,8 @@ public class Dependencies {
             "option",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     );
 
     public static final Dependency ADVENTURE_API = new Dependency(
@@ -233,7 +202,8 @@ public class Dependencies {
             "adventure-api",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     );
 
     public static final Dependency ADVENTURE_NBT = new Dependency(
@@ -242,7 +212,8 @@ public class Dependencies {
             "adventure-nbt",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -256,7 +227,8 @@ public class Dependencies {
             "adventure-key",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -270,7 +242,8 @@ public class Dependencies {
             "examination-api",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     );
 
     public static final Dependency EXAMINATION_STRING = new Dependency(
@@ -279,7 +252,8 @@ public class Dependencies {
             "examination-string",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -293,7 +267,8 @@ public class Dependencies {
             "adventure-text-minimessage",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -307,7 +282,8 @@ public class Dependencies {
             "adventure-text-serializer-commons",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -321,7 +297,8 @@ public class Dependencies {
             "adventure-text-serializer-gson",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -335,7 +312,8 @@ public class Dependencies {
             "adventure-text-serializer-json-legacy-impl",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -349,7 +327,8 @@ public class Dependencies {
             "adventure-text-serializer-legacy",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -363,7 +342,8 @@ public class Dependencies {
             "adventure-text-serializer-json",
             List.of(Relocation.of("option", "net{}kyori{}option"),
                     Relocation.of("examination", "net{}kyori{}examination"),
-                    Relocation.of("adventure", "net{}kyori{}adventure"))
+                    Relocation.of("adventure", "net{}kyori{}adventure")),
+            true
     ) {
         @Override
         public String getVersion() {
@@ -392,32 +372,42 @@ public class Dependencies {
             List.of(Relocation.of("evalex", "com{}ezylang{}evalex"))
     );
 
+    public static final Dependency JIMFS = new Dependency(
+            "jimfs",
+            "com{}google{}jimfs",
+            "jimfs",
+            List.of(Relocation.of("jimfs", "com{}google{}common{}jimfs"))
+    );
+
     public static final Dependency NETTY_HTTP = new Dependency(
             "netty-codec-http",
             "io{}netty",
             "netty-codec-http",
-            Collections.emptyList()
+            List.of(
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
+            )
     );
 
     public static final Dependency NETTY_HTTP2 = new Dependency(
             "netty-codec-http2",
             "io{}netty",
             "netty-codec-http2",
-            Collections.emptyList()
+            List.of(Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"))
     );
 
     public static final Dependency REACTIVE_STREAMS = new Dependency(
             "reactive-streams",
             "org{}reactivestreams",
             "reactive-streams",
-            List.of(Relocation.of("reactivestreams", "org{}reactivestreams"))
-    );
-
-    public static final Dependency JIMFS = new Dependency(
-            "jimfs",
-            "com{}google{}jimfs",
-            "jimfs",
-            List.of(Relocation.of("jimfs", "com{}google{}common{}jimfs"))
+            List.of(
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
+            )
     );
 
     public static final Dependency AMAZON_AWSSDK_S3 = new Dependency(
@@ -426,7 +416,11 @@ public class Dependencies {
             "s3",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     );
 
@@ -436,7 +430,11 @@ public class Dependencies {
             "netty-nio-client",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -451,7 +449,11 @@ public class Dependencies {
             "sdk-core",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -466,7 +468,11 @@ public class Dependencies {
             "auth",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -481,7 +487,11 @@ public class Dependencies {
             "regions",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -496,7 +506,11 @@ public class Dependencies {
             "identity-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -511,7 +525,11 @@ public class Dependencies {
             "http-client-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -526,7 +544,11 @@ public class Dependencies {
             "protocol-core",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -541,7 +563,11 @@ public class Dependencies {
             "aws-xml-protocol",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -556,7 +582,11 @@ public class Dependencies {
             "json-utils",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -571,7 +601,11 @@ public class Dependencies {
             "aws-core",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -586,7 +620,11 @@ public class Dependencies {
             "utils",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -601,7 +639,11 @@ public class Dependencies {
             "annotations",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -616,7 +658,11 @@ public class Dependencies {
             "crt-core",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -631,7 +677,11 @@ public class Dependencies {
             "checksums",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -646,7 +696,11 @@ public class Dependencies {
             "eventstream",
             List.of(
                     Relocation.of("eventstream", "software{}amazon{}eventstream"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     );
 
@@ -656,7 +710,11 @@ public class Dependencies {
             "profiles",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -671,7 +729,11 @@ public class Dependencies {
             "retries",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -686,7 +748,11 @@ public class Dependencies {
             "endpoints-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -701,7 +767,11 @@ public class Dependencies {
             "arns",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -716,7 +786,11 @@ public class Dependencies {
             "aws-query-protocol",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -731,7 +805,11 @@ public class Dependencies {
             "http-auth-aws",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -746,7 +824,11 @@ public class Dependencies {
             "http-auth-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -761,7 +843,11 @@ public class Dependencies {
             "http-auth",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -776,7 +862,11 @@ public class Dependencies {
             "http-auth-aws-eventstream",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -791,7 +881,11 @@ public class Dependencies {
             "checksums-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -806,7 +900,11 @@ public class Dependencies {
             "retries-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -821,7 +919,11 @@ public class Dependencies {
             "metrics-spi",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
@@ -836,7 +938,11 @@ public class Dependencies {
             "third-party-jackson-core",
             List.of(
                     Relocation.of("awssdk", "software{}amazon{}awssdk"),
-                    Relocation.of("reactivestreams", "org{}reactivestreams")
+                    Relocation.of("reactivestreams", "org{}reactivestreams"),
+                    Relocation.of("netty{}handler{}codec{}http2", "io{}netty{}handler{}codec{}http2"),
+                    Relocation.of("netty{}handler{}codec{}http", "io{}netty{}handler{}codec{}http"),
+                    Relocation.of("netty{}handler{}codec{}rtsp", "io{}netty{}handler{}codec{}rtsp"),
+                    Relocation.of("netty{}handler{}codec{}spdy", "io{}netty{}handler{}codec{}spdy")
             )
     ) {
         @Override
